Added index.html and style.css

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,15 +8,14 @@
 
     <link href="{{ url_for('static', filename='vendor/bootstrap/bootstrap.min.css') }}" rel="stylesheet"
         type="text/css">
-    <!-- <link href="{{ url_for('static', filename='vendor/bootstrap/bootstrap.min.css.map') }}" rel="stylesheet" type="text/css"> -->
-    <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet" type="text/css">
+    <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet" type="text/css">
 </head>
 
 <body>
     <div class="container">
         <section id="scraper" class="jumbotron text-center">
             <h1>Mission to Mars</h1>
-            <p><a class="btn btn-secondary btn-lg" href="./scrape" role="button">Scrape New Date</a></p>
+            <p><a class="btn btn-secondary btn-lg" href="./scrape" role="button">Scrape New Data</a></p>
         </section>
 
         <section id="upper" class="">
